--- a/css/main.css
+++ b/css/main.css
@@ -3,4 +3,149 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
+    color:#222;
+    scroll-behavior: smooth;
+}
+body{
+    background-color: #f1f1f1;
+    font-size: 18px;
+}
+
+header{
+    background-image: url("../assets/img/hero-background.jpg"),linear-gradient(rgba(0,0,0,0.55),rgba(0,0,0,0.2));
+    background-blend-mode: overlay;
+    background-position:center;
+}
+
+.header-container{
+    display: flex;
+    justify-content: space-between;
+    max-width: 90%;
+    margin: auto;
+    padding: 2rem 0;
+    font-size: 1.1rem;
+    font-weight: 600;
+    
+}
+
+header .logo{
+    font-weight: 700;
+    color:#fff;
+}
+
+header nav ul{
+    display: flex;
+    gap: 3rem;
+}
+
+header nav ul li{
+    list-style: none;
+}
+
+header nav ul li a{
+    text-decoration: none;
+    color:#fff;
+}
+
+section{
+    max-width: 90%;
+    margin: auto;
+    padding: 5rem 0;
+}
+
+.hero{   
+    min-height: 70vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero h1{
+    font-size: 60px;
+    text-align: center;
+    text-shadow: 3px 3px 10px rgba(0, 0, 0, 1);
+    color:#fff;
+}
+
+.about{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 50px;
+    align-items: center;
+}
+.about-image img{
+    width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 5px;
+}
+
+h2{
+    font-size: 2.5rem;
+}
+
+
+/* Footer Styles */
+
+footer{
+    background-color: #2F1932;
+    
+}
+.footer-container{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    justify-content: space-between;
+    max-width: 90%;
+    margin: auto;
+    padding: 5rem 0;
+    color:#fff;
+}
+
+footer h3{
+    color:#fff;
+}
+footer ul{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
+}
+footer ul li{
+    list-style: none;
+}
+footer ul li a{
+    color:#fff;
+    text-decoration: none;
+}
+
+.newsletter form {
+    width: 100%;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    margin-top: 20px;
+}
+.newsletter form input[type=email]{
+    outline: none;
+    padding: 12px 0;
+    background-color:#2F1932;
+    color:#fff;
+    border: none;
+    border-bottom:1px solid #fff;
+    font-size: 1rem;
+}
+
+.newsletter form input[type=email]::placeholder{
+    color:#ffffffd2;
+}
+
+.newsletter form button{
+    background-color: #8C54D1;
+    outline: none;
+    border: none;
+    color:#fff;
+    padding: 12px;
+    font-size: 1rem;
+    border-radius: 5px;
+    cursor: pointer;
 }
