--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,37 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
-    color:#222;
+    font-family: "Open Sans", sans-serif;
+    color: #222;
     scroll-behavior: smooth;
 }
-body{
-    background-color: #f1f1f1;
+body {
+    background-color: #f7f1ff;
     font-size: 18px;
 }
 
-header{
-    background-image: url("../assets/img/hero-background.jpg"),linear-gradient(rgba(0,0,0,0.55),rgba(0,0,0,0.2));
-    background-blend-mode: overlay;
-    background-position:center;
+.button {
+    display: block;
+    width: max-content;
+    text-decoration: none;
+    background: #8c54d1;
+    padding: 15px 50px;
+    border-radius: 5px;
+    color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 500;
 }
 
-.header-container{
+header {
+    background-image: url("../assets/img/hero-background.jpg"), linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.2));
+    background-blend-mode: overlay;
+    background-position: center;
+}
+
+.header-container {
     display: flex;
     justify-content: space-between;
     max-width: 90%;
@@ -25,125 +39,303 @@ header{
     padding: 2rem 0;
     font-size: 1.1rem;
     font-weight: 600;
-    
 }
 
-header .logo{
+header .logo {
     font-weight: 700;
-    color:#fff;
+    font-size: 2rem;
+    color: #ddc2ff;
 }
 
-header nav ul{
+header nav ul {
     display: flex;
     gap: 3rem;
 }
 
-header nav ul li{
+header nav ul li {
     list-style: none;
 }
 
-header nav ul li a{
+header nav ul li a {
     text-decoration: none;
-    color:#fff;
+    color: #fff;
 }
 
-section{
-    max-width: 90%;
+section {
     margin: auto;
     padding: 5rem 0;
 }
 
-.hero{   
-    min-height: 70vh;
+.hero {
+    padding: 0 200px;
+    min-height: 60vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.hero h1{
+.hero h1 {
     font-size: 60px;
     text-align: center;
     text-shadow: 3px 3px 10px rgba(0, 0, 0, 1);
-    color:#fff;
+    color: #fff;
 }
 
-.about{
-    width: 100%;
+.about {
+    /* width: 100%; */
+    max-width: 90%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 50px;
     align-items: center;
 }
-.about-image img{
+.about-image img {
     width: 100%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 5px;
 }
 
-h2{
+h2 {
     font-size: 2.5rem;
 }
 
+/* Bio */
+.bio {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+/* Contact Us */
+.contact {
+    background: rgb(252, 229, 239);
+    background: radial-gradient(circle, rgb(253, 238, 244) 0%, #9f81c4c2 100%);
+    padding: 50px 20%;
+    min-height: 600px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 100px;
+    align-items: center;
+}
+.contact h2 {
+    font-size: 2rem;
+    display: flex;
+    flex-direction: column;
+}
+.contact span.logo {
+    font-size: 3rem;
+    background: -webkit-linear-gradient(90deg, #8c54d1 0%, #a774e2 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.contact p:first-of-type {
+    margin-top: 20px;
+}
+
+.contact .text {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.contact form {
+    background: rgba(255, 255, 255, 0.5);
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 8px;
+    gap: 25px;
+}
+
+/* Ticketing Services */
+.ticketing {
+    background: #eddeff;
+    padding: 100px;
+}
+.ticketing .headline {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 20px;
+    margin-bottom: 50px;
+}
+.ticketing .services {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 50px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.ticketing .services .service-box {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px;
+    border-radius: 10px;
+    padding: 30px;
+    font-size: 1rem;
+}
+
+.ticketing .service-box .text {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.ticketing .service-box .text p {
+    font-size: 0.9rem;
+}
+
+.ticketing .service-box .icon img {
+    width: 100px;
+}
+
+/* Gallery */
+.gallery {
+    padding: 100px;
+    text-align: center;
+}
+.gallery h2 {
+    margin-bottom: 50px;
+}
+.gallery .gallery-grid {
+    display: grid;
+    grid-template-columns: 1fr 1.5fr 1fr;
+    grid-template-rows: 400px 400px;
+    grid-template-areas:
+        "img1 img1 img2"
+        "img3 img4 img5";
+    gap: 10px;
+}
+
+.gallery .gallery-grid img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.gallery-grid .img1 {
+    grid-area: img1;
+}
+.gallery-grid .img2 {
+    grid-area: img2;
+}
+.gallery-grid .img3 {
+    grid-area: img3;
+}
+.gallery-grid .img4 {
+    grid-area: img4;
+}
+.gallery-grid .img5 {
+    grid-area: img5;
+}
+
+/* Register Section */
+.register {
+    padding: 100px;
+}
+.register h2 {
+    margin-bottom: 50px;
+}
+.register .showcase {
+    width: 100%;
+    display: flex;
+    gap: 15px;
+    flex-wrap: nowrap;
+    overflow-x: hidden;
+    padding: 10px;
+}
+.register .showcase-box {
+    min-width: 100%;
+    background: rgba(255, 255, 255, 0.5);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px;
+    padding: 40px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.showcase-box .icon img {
+    width: 50px;
+}
+.register .arrows {
+    float: right;
+}
+.register .arrows img {
+    width: 80px;
+    cursor: pointer;
+}
+.register .arrows .left-arrow {
+    opacity: 0;
+}
 
 /* Footer Styles */
 
-footer{
-    background-color: #2F1932;
-    
+footer {
+    background-color: #2f1932;
 }
-.footer-container{
+.footer-container {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     justify-content: space-between;
     max-width: 90%;
     margin: auto;
     padding: 5rem 0;
-    color:#fff;
+    color: #fff;
 }
 
-footer h3{
-    color:#fff;
+footer h3 {
+    color: #fff;
 }
-footer ul{
+footer ul {
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 20px;
 }
-footer ul li{
+footer ul li {
     list-style: none;
 }
-footer ul li a{
-    color:#fff;
+footer ul li a {
+    color: #fff;
     text-decoration: none;
 }
 
-.newsletter form {
+form {
     width: 100%;
     display: flex;
     gap: 20px;
     flex-direction: column;
     margin-top: 20px;
 }
-.newsletter form input[type=email]{
+form input,
+form textarea {
     outline: none;
-    padding: 12px 0;
-    background-color:#2F1932;
-    color:#fff;
+    padding: 12px 12px;
     border: none;
-    border-bottom:1px solid #fff;
+    border-bottom: 1px solid #fff;
     font-size: 1rem;
+    border-radius: 5px;
 }
 
-.newsletter form input[type=email]::placeholder{
-    color:#ffffffd2;
+.newsletter form input[type="email"] {
+    background-color: #2f1932;
+    padding: 12px 0px;
+    border-radius: 0;
+    color: #fff;
 }
 
-.newsletter form button{
-    background-color: #8C54D1;
+.newsletter form input[type="email"]::placeholder {
+    color: #ffffffd2;
+}
+
+form button {
+    background-color: #8c54d1;
     outline: none;
     border: none;
-    color:#fff;
+    color: #fff;
     padding: 12px;
     font-size: 1rem;
     border-radius: 5px;
