--- a/css/main.css
+++ b/css/main.css
@@ -450,8 +450,10 @@ form button:hover {
         padding: 0 50px;
     }
 
-    body {
+    body,
+    html {
         overflow-x: hidden;
+        position: relative;
     }
     body.fixed {
         overflow-y: hidden;
@@ -461,6 +463,7 @@ form button:hover {
     }
     .mobile-menu {
         display: flex;
+        z-index: 999;
     }
     .mobile-menu ul {
         flex-direction: column;
@@ -471,7 +474,7 @@ form button:hover {
         height: 100%;
         padding: 100px;
         position: absolute;
-        right: -60%;
+        right: -100%;
         top: 0;
         transition: 0.3s all ease;
     }
@@ -528,6 +531,10 @@ form button:hover {
     h2 {
         font-size: 2rem;
     }
+    .mobile-menu ul {
+        width: 75%;
+        padding: 100px 50px;
+    }
 }
 
 @media screen and (max-width: 450px) {
@@ -551,5 +558,8 @@ form button:hover {
     }
     .ticketing .services {
         gap: 20px;
+    }
+    .mobile-menu ul {
+        width: 80%;
     }
 }
